weixin regester and jwt
