# docs/swagger/swagger.yaml
@@ -1,12 +1,33 @@
-basePath: /api/v1
+basePath: /api/v1/
 definitions:
-  controller.Message:
+  models.Account:
     properties:
-      message:
-        example: message
+      avatar:
+        type: string
+      city:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      introduce:
+        type: string
+      is_root:
+        type: integer
+      mobile:
+        type: string
+      name:
+        type: string
+      open_id:
+        type: string
+      uid:
+        type: integer
+      union_id:
+        type: string
+      updated_at:
         type: string
     type: object
-  httputil.HTTPError:
+  utils.HTTPError:
     properties:
       code:
         example: 400
@@ -15,45 +36,12 @@ definitions:
         example: status bad request
         type: string
     type: object
-  model.Account:
-    properties:
-      id:
-        example: 1
-        format: int64
-        type: integer
-      name:
-        example: account name
-        type: string
-      uuid:
-        example: 550e8400-e29b-41d4-a716-446655440000
-        format: uuid
-        type: string
-    type: object
-  model.AddAccount:
-    properties:
-      name:
-        example: account name
-        type: string
-    type: object
-  model.UpdateAccount:
-    properties:
-      name:
-        example: account name
-        type: string
-    type: object
-host: localhost:8080
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server celler server.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
+  contact: {}
+  description: This is a sample server Petstore server.
+  license: {}
   title: Swagger Example API
-  version: "1.0"
+  version: 0.0.1
 paths:
   /accounts:
     get:
@@ -73,22 +61,22 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.Account'
+              $ref: '#/definitions/models.Account'
             type: array
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
       summary: List accounts
       tags:
@@ -103,7 +91,6 @@ paths:
         name: account
         required: true
         schema:
-          $ref: '#/definitions/model.AddAccount'
           type: object
       produces:
       - application/json
@@ -111,22 +98,22 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Account'
+            $ref: '#/definitions/models.Account'
             type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
       summary: Add a account
       tags:
@@ -149,24 +136,24 @@ paths:
         "204":
           description: No Content
           schema:
-            $ref: '#/definitions/model.Account'
+            $ref: '#/definitions/models.Account'
             type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
-      summary: Update a account
+      summary: 修改用户
       tags:
       - accounts
     get:
@@ -185,22 +172,22 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Account'
+            $ref: '#/definitions/models.Account'
             type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
       summary: Show a account
       tags:
@@ -220,7 +207,6 @@ paths:
         name: account
         required: true
         schema:
-          $ref: '#/definitions/model.UpdateAccount'
           type: object
       produces:
       - application/json
@@ -228,102 +214,62 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Account'
+            $ref: '#/definitions/models.Account'
             type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
       summary: Update a account
       tags:
       - accounts
-  /accounts/{id}/images:
+  /accounts/token:
     post:
       consumes:
-      - multipart/form-data
-      description: Upload file
+      - application/json
+      description: get token
       parameters:
-      - description: Account ID
-        in: path
-        name: id
+      - description: Add account
+        in: body
+        name: account
         required: true
-        type: integer
-      - description: account image
-        in: formData
-        name: file
-        required: true
-        type: file
+        schema:
+          type: object
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Message'
+            $ref: '#/definitions/string'
             type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/utils.HTTPError'
             type: object
-      summary: Upload account image
+      summary: 微信授权获取token接口
       tags:
       - accounts
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
-  BasicAuth:
-    type: basic
-  OAuth2AccessCode:
-    authorizationUrl: https://example.com/oauth/authorize
-    flow: accessCode
-    scopes:
-      admin: ' Grants read and write access to administrative information'
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
-  OAuth2Application:
-    flow: application
-    scopes:
-      admin: ' Grants read and write access to administrative information'
-      write: ' Grants write access'
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
-  OAuth2Implicit:
-    authorizationUrl: https://example.com/oauth/authorize
-    flow: implicit
-    scopes:
-      admin: ' Grants read and write access to administrative information'
-      write: ' Grants write access'
-    type: oauth2
-  OAuth2Password:
-    flow: password
-    scopes:
-      admin: ' Grants read and write access to administrative information'
-      read: ' Grants read access'
-      write: ' Grants write access'
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
 swagger: "2.0"
